// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Om foreldrepenger matcher snapshot 1`] = `
<section
  className="sc-eGRTUG iMOXnG"
>
  <h2
    className="sr-only"
    id="Helt tilfeldig ID"
    tabIndex={-1}
  >
    Valgt ytelse
  </h2>
  <article>
    <div
      aria-labelledby="Helt tilfeldig ID"
      className="panel sc-hOGjNT fzmBTc"
    >
      <h2
        className="sr-only"
        id="Helt tilfeldig ID"
        tabIndex={-1}
      >
        Foreldrepengerettighet
      </h2>
      <div
        className="sc-bTfYlY ddKqDC"
      >
        <div
          className="sc-kHOZQx kxkWKI"
        >
          <article
            aria-labelledby="Helt tilfeldig ID"
            className="sc-jIkYaL fZcHzm"
          >
            <h3
              className="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Om foreldrepengeretten
            </h3>
            <dl
              className="sc-eCImvq cryMZN"
            >
              <div>
                <dt
                  className="typo-normal"
                >
                  Foreldrepengetype
                </dt>
                <dd
                  className="typo-element"
                >
                  Fødselspenger
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Dekningsgrad
                </dt>
                <dd
                  className="typo-element"
                >
                  34%
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Rettighet fra dato
                </dt>
                <dd
                  className="typo-element"
                >
                  29.04.2017
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Graderingsdager
                </dt>
                <dd
                  className="typo-element"
                >
                  55
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Restdager
                </dt>
                <dd
                  className="typo-element"
                >
                  41
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Maksdato
                </dt>
                <dd
                  className="typo-element"
                >
                  —
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Arbeidskategori
                </dt>
                <dd
                  className="typo-element"
                >
                  Arbeidstaker
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Fedrekvote til og med
                </dt>
                <dd
                  className="typo-element"
                >
                  10.02.2019
                </dd>
              </div>
            </dl>
          </article>
          <article
            aria-labelledby="Helt tilfeldig ID"
            className="sc-jIkYaL fZcHzm"
          >
            <h3
              className="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Om barnet
            </h3>
            <dl
              className="sc-eCImvq cryMZN"
            >
              <div>
                <dt
                  className="typo-normal"
                >
                  Termindato
                </dt>
                <dd
                  className="typo-element"
                >
                  11.02.2019
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Fødselsdato
                </dt>
                <dd
                  className="typo-element"
                >
                  11.02.2019
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Annen forelder
                </dt>
                <dd
                  className="typo-element"
                >
                  03063850003
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Antall barn
                </dt>
                <dd
                  className="typo-element"
                >
                  5
                </dd>
              </div>
            </dl>
          </article>
        </div>
        <article
          aria-labelledby="Helt tilfeldig ID"
          className="sc-jIkYaL fZcHzm"
        >
          <h3
            className="typo-ingress"
            id="Helt tilfeldig ID"
          >
            Arbeidssituasjon
          </h3>
          <ol
            aria-label="Arbeidsgivere"
            className="sc-hmjpBu fBqpDZ"
          >
            <li>
              <dl
                className="sc-eCImvq cryMZN"
              >
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Arbeidsgiver
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Bakke - Solheim
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Kontonummer
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    <span
                      className="sc-jOxuqd jUweto"
                    >
                      <span>
                        3517
                      </span>
                      <span>
                        91
                      </span>
                      <span>
                        78779
                      </span>
                    </span>
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Inntekstsperiode
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Månedlig
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Inntekt for perioden
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    40 062,00 NOK
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Refusjonstype
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Ikke refusjon
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Refusjon til dato
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    11.02.2019
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Sykepenger fra og med
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    10.02.2019
                  </dd>
                </div>
              </dl>
            </li>
          </ol>
          <button
            className="knapp sc-eLwHGX ifRnTZ knapp--hoved"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Vis alle arbeidsforhold
          </button>
        </article>
      </div>
      <ol>
        <li
          className="sc-dvQbkV jKjISW"
        >
          <div
            className="sc-fWCJfs bpJMwW"
          >
            <h3
              className="typo-element"
            >
              Periode 1 - 29.04.2017
            </h3>
          </div>
          <article
            className="sc-ZOsLE ebgXwz"
          >
            <article
              aria-labelledby="Helt tilfeldig ID"
              className="sc-jIkYaL fZcHzm"
            >
              <h3
                className="typo-ingress"
                id="Helt tilfeldig ID"
              >
                Om foreldrepengeperioden
              </h3>
              <dl
                className="sc-eCImvq cryMZN"
              >
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Arbeidsprosent mor
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    58%
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Mors situasjon
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    nobis sit quo et quis
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Disponibel gradering
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    9%
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Forskyvelsesperiode
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    08.10.2014 - 22.08.2014
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Andre forskyvelsesperiode
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    09.12.2014 - 26.08.2014
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Midlertidig stans
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    2019-02-10
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Stansårsak
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Avsluttet
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Avslått
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Avslått
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Mødrekvote
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    —
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Rett til Mødrekvote
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Ingen rett til mødrekvote
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Aleneomsorg Mor
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    —
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Fedrekvote
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    —
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Rett til Fedrekvote
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Rett til fedrekvote
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Aleneomsorg Far
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    —
                  </dd>
                </div>
              </dl>
            </article>
            <section
              className="sc-TBWwm cfGfJO"
            >
              <h4
                className="typo-ingress"
              >
                Utbetalinger
              </h4>
              <div
                className="sc-iCfLBT gEOSDn typo-normal"
              >
                <table
                  role="table"
                >
                  <thead
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <th
                        role="columnheader"
                      >
                        Reg.dato
                      </th>
                      <th
                        role="columnheader"
                      >
                        Type
                      </th>
                      <th
                        role="columnheader"
                      >
                        Periode
                      </th>
                      <th
                        role="columnheader"
                      >
                        Utb.grad
                      </th>
                      <th
                        role="columnheader"
                      >
                        Dagsats
                      </th>
                      <th
                        role="columnheader"
                      >
                        Bruttobeløp
                      </th>
                      <th
                        role="columnheader"
                      >
                        Arb.giver
                      </th>
                      <th
                        role="columnheader"
                      >
                        Org.nummer
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <td
                        role="cell"
                      >
                        25.06.2018
                      </td>
                      <td
                        role="cell"
                      >
                        KONTOØVERFØRING
                      </td>
                      <td
                        role="cell"
                      >
                        14.01.2018 - 15.07.2017
                      </td>
                      <td
                        role="cell"
                      >
                        79%
                      </td>
                      <td
                        role="cell"
                      >
                        705,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        466,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        Vedvik - Lunde
                      </td>
                      <td
                        role="cell"
                      >
                        1234567890
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="alertstripe alertstripe--info"
              >
                <span
                  className="alertstripe__ikon"
                >
                  <span
                    className="sr-only"
                  >
                    info
                  </span>
                  <svg
                    aria-label="info-ikon"
                    focusable="false"
                    height="1.5em"
                    kind="info-sirkel-fyll"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1.5em"
                  >
                    <g
                      fill="none"
                    >
                      <path
                        d="M12 0C5.382 0 0 5.382 0 12s5.382 12 12 12c6.617 0 12-5.382 12-12S18.617 0 12 0z"
                        fill="#337C9B"
                      />
                      <path
                        d="M12 5a1.566 1.566 0 1 1 .11 3.13A1.566 1.566 0 0 1 12 5zm2.976 12.01c.563 0 1.043.431 1.043.991s-.48.992-1.043.992H9.39c-.564 0-1.043-.431-1.043-.992 0-.56.479-.99 1.043-.99h1.6v-5.016h-.986c-.565 0-1.044-.43-1.044-.991 0-.56.48-.991 1.044-.991h2.03c.563 0 1.043.43 1.043.99v6.007h1.899z"
                        fill="#FFF"
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="typo-normal alertstripe__tekst"
                >
                  For detaljer om utførte utbetalinger 
                  <a
                    href="/person/10108000398/utbetaling"
                    onClick={[Function]}
                  >
                    se Utbetalingsoversikten.
                  </a>
                </div>
              </div>
            </section>
          </article>
        </li>
      </ol>
    </div>
  </article>
</section>
`;

exports[`Om pleiepenger matcher snapshot 1`] = `
<section
  className="sc-eGRTUG iMOXnG"
>
  <h2
    className="sr-only"
    id="Helt tilfeldig ID"
    tabIndex={-1}
  >
    Valgt ytelse
  </h2>
  <article>
    <div
      aria-labelledby="Helt tilfeldig ID"
      className="panel sc-fvxABq gMwBTO"
    >
      <h2
        className="sr-only"
        id="Helt tilfeldig ID"
      >
        Pleiepengerrettighet
      </h2>
      <div
        className="sc-jQrCkL gOXIWX"
      >
        <article
          aria-labelledby="Helt tilfeldig ID"
          className="sc-jIkYaL fZcHzm"
        >
          <h3
            className="typo-ingress"
            id="Helt tilfeldig ID"
          >
            Om pleiepengeretten
          </h3>
          <dl
            className="sc-eCImvq cryMZN"
          >
            <div>
              <dt
                className="typo-normal"
              >
                Fra og med
              </dt>
              <dd
                className="typo-element"
              >
                29.09.2017
              </dd>
            </div>
            <div>
              <dt
                className="typo-normal"
              >
                Til og med
              </dt>
              <dd
                className="typo-element"
              >
                24.10.2017
              </dd>
            </div>
            <div>
              <dt
                className="typo-normal"
              >
                Pleiepengegrad
              </dt>
              <dd
                className="typo-element"
              >
                66%
              </dd>
            </div>
            <div>
              <dt
                className="typo-normal"
              >
                Barnet (jente)
              </dt>
              <dd
                className="typo-element"
              >
                12345678910
              </dd>
            </div>
            <div>
              <dt
                className="typo-normal"
              >
                Annen forelder
              </dt>
              <dd
                className="typo-element"
              >
                26087625779
              </dd>
            </div>
          </dl>
        </article>
        <article
          aria-labelledby="Helt tilfeldig ID"
          className="sc-jIkYaL fZcHzm"
        >
          <h3
            className="typo-ingress"
            id="Helt tilfeldig ID"
          >
            Arbeidssituasjon
          </h3>
          <ol
            aria-label="Arbeidsgivere"
            className="sc-cZMLWB eQjDYQ"
          >
            <li>
              <dl
                className="sc-eCImvq cryMZN"
              >
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Arbeidsgiver
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Ryan og Sønner
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Arbeidskategori
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Arbeidstaker
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Inntekstsperiode
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Månedssats
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Kontonummer
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    <span
                      className="sc-jOxuqd jUweto"
                    >
                      <span>
                        5493
                      </span>
                      <span>
                        85
                      </span>
                      <span>
                        21445
                      </span>
                    </span>
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Refusjonstype
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Ikke refusjon
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Inntekt for perioden
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    45 029,00 NOK
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Refusjon til dato
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    11.10.2018
                  </dd>
                </div>
              </dl>
            </li>
          </ol>
          <button
            className="knapp sc-jUotMc jHWvUC knapp--hoved"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Vis alle arbeidsforhold
          </button>
        </article>
      </div>
      <ol>
        <li
          className="sc-dvQbkV jKjISW"
        >
          <div
            className="sc-fWCJfs bpJMwW"
          >
            <h3
              className="typo-element"
            >
              Periode 2 - 14.11.2018
            </h3>
          </div>
          <div
            className="sc-dtMiey cyIbri"
          >
            <p
              className="typo-ingress"
            >
              Anviste utbetalinger
            </p>
            <div
              className="sc-iCfLBT gEOSDn typo-normal"
            >
              <table
                role="table"
              >
                <thead
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <th
                      role="columnheader"
                    >
                      Fra og med
                    </th>
                    <th
                      role="columnheader"
                    >
                      Til og med
                    </th>
                    <th
                      role="columnheader"
                    >
                      Bruttobeløp
                    </th>
                    <th
                      role="columnheader"
                    >
                      Anvist utbetaling
                    </th>
                    <th
                      role="columnheader"
                    >
                      Dagsats
                    </th>
                    <th
                      role="columnheader"
                    >
                      Pleiepengegrad
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <td
                      role="cell"
                    >
                      29.09.2017
                    </td>
                    <td
                      role="cell"
                    >
                      24.10.2017
                    </td>
                    <td
                      role="cell"
                    >
                      120,00 NOK
                    </td>
                    <td
                      role="cell"
                    >
                      28.05.2017
                    </td>
                    <td
                      role="cell"
                    >
                      5,00 NOK
                    </td>
                    <td
                      role="cell"
                    >
                      66%
                    </td>
                  </tr>
                  <tr
                    role="row"
                  >
                    <td
                      role="cell"
                    >
                      18.07.2017
                    </td>
                    <td
                      role="cell"
                    >
                      26.07.2017
                    </td>
                    <td
                      role="cell"
                    >
                      596,00 NOK
                    </td>
                    <td
                      role="cell"
                    >
                      21.06.2017
                    </td>
                    <td
                      role="cell"
                    >
                      27,00 NOK
                    </td>
                    <td
                      role="cell"
                    >
                      58%
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </li>
        <li
          className="sc-dvQbkV jKjISW"
        >
          <div
            className="sc-fWCJfs bpJMwW"
          >
            <h3
              className="typo-element"
            >
              Periode 1 - 16.10.2018
            </h3>
          </div>
          <div
            className="sc-dtMiey cyIbri"
          >
            <p
              className="typo-ingress"
            >
              Anviste utbetalinger
            </p>
            <div
              className="sc-iCfLBT gEOSDn typo-normal"
            >
              <table
                role="table"
              >
                <thead
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <th
                      role="columnheader"
                    >
                      Fra og med
                    </th>
                    <th
                      role="columnheader"
                    >
                      Til og med
                    </th>
                    <th
                      role="columnheader"
                    >
                      Bruttobeløp
                    </th>
                    <th
                      role="columnheader"
                    >
                      Anvist utbetaling
                    </th>
                    <th
                      role="columnheader"
                    >
                      Dagsats
                    </th>
                    <th
                      role="columnheader"
                    >
                      Pleiepengegrad
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <td
                      role="cell"
                    >
                      01.12.2018
                    </td>
                    <td
                      role="cell"
                    >
                      09.12.2018
                    </td>
                    <td
                      role="cell"
                    >
                      69,00 NOK
                    </td>
                    <td
                      role="cell"
                    >
                      29.06.2018
                    </td>
                    <td
                      role="cell"
                    >
                      12,00 NOK
                    </td>
                    <td
                      role="cell"
                    >
                      92%
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </li>
      </ol>
    </div>
  </article>
</section>
`;

exports[`Om sykepenger matcher snapshot 1`] = `
<section
  className="sc-eGRTUG iMOXnG"
>
  <h2
    className="sr-only"
    id="Helt tilfeldig ID"
    tabIndex={-1}
  >
    Valgt ytelse
  </h2>
  <article>
    <div
      aria-labelledby="Helt tilfeldig ID"
      className="panel sc-GEcJY gUwita"
    >
      <h2
        className="sr-only"
        id="Helt tilfeldig ID"
      >
        Sykepengerrettighet
      </h2>
      <div
        className="sc-gsNhcj eMJhwx"
      >
        <div
          className="sc-bXTfsO liYOHf"
        >
          <article
            aria-labelledby="Helt tilfeldig ID"
            className="sc-jIkYaL fZcHzm"
          >
            <h3
              className="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Sykepengetilfellet
            </h3>
            <dl
              className="sc-eCImvq cryMZN"
            >
              <div>
                <dt
                  className="typo-normal"
                >
                  Sykemeldt fra og med
                </dt>
                <dd
                  className="typo-element"
                >
                  06.02.2019
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Forbrukte dager
                </dt>
                <dd
                  className="typo-element"
                >
                  23
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Untatt aktivitet
                </dt>
                <dd
                  className="typo-element"
                >
                  —
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Midlertidig stans
                </dt>
                <dd
                  className="typo-element"
                >
                  —
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Sanksjonperiode
                </dt>
                <dd
                  className="typo-element"
                >
                  19.01.2014 - 05.09.2014
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Ferieperioder
                </dt>
                <dd
                  className="typo-element"
                >
                  19.01.2014 - 14.01.2014
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Forsikring
                </dt>
                <dd
                  className="typo-element"
                >
                  837,00 NOK
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Gyldig forsikring
                </dt>
                <dd
                  className="typo-element"
                >
                  Nei
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Forsikringsperiode
                </dt>
                <dd
                  className="typo-element"
                >
                  —
                </dd>
              </div>
            </dl>
          </article>
          <article
            aria-labelledby="Helt tilfeldig ID"
            className="sc-jIkYaL fZcHzm"
          >
            <h3
              className="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Sykmelding
            </h3>
            <dl
              className="sc-eCImvq cryMZN"
            >
              <div>
                <dt
                  className="typo-normal"
                >
                  Periode
                </dt>
                <dd
                  className="typo-element"
                >
                  09.02.2014 - 11.05.2014
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Behandlingsdato
                </dt>
                <dd
                  className="typo-element"
                >
                  01.04.2018
                </dd>
              </div>
              <div>
                <dt
                  className="typo-normal"
                >
                  Sykmelder
                </dt>
                <dd
                  className="typo-element"
                >
                  Lommelegen AS
                </dd>
              </div>
            </dl>
            <div
              className="sc-iCfLBT gEOSDn typo-normal"
            >
              <table
                role="table"
              >
                <thead
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <th
                      role="columnheader"
                    >
                      Periode
                    </th>
                    <th
                      role="columnheader"
                    >
                      Gradering
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <td
                      role="cell"
                    >
                      28.07.2014 - 03.01.2014
                    </td>
                    <td
                      role="cell"
                    >
                      89%
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </article>
        </div>
        <article
          aria-labelledby="Helt tilfeldig ID"
          className="sc-jIkYaL fZcHzm"
        >
          <h3
            className="typo-ingress"
            id="Helt tilfeldig ID"
          >
            Arbeidssituasjon
          </h3>
          <dl
            className="sc-eCImvq cryMZN"
          >
            <div>
              <dt
                className="typo-normal"
              >
                Arbeidsgiverperiode
              </dt>
              <dd
                className="typo-element"
              >
                Ja
              </dd>
            </div>
            <div>
              <dt
                className="typo-normal"
              >
                Arbeidskategori
              </dt>
              <dd
                className="typo-element"
              >
                Ærlig arbeid
              </dd>
            </div>
          </dl>
          <ol
            aria-label="Arbeidsgivere"
            className="sc-hmjpBu fBqpDZ"
          >
            <li>
              <dl
                className="sc-eCImvq cryMZN"
              >
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Arbeidsgiver
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Bærlevåg Burger og Bitcoin
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Kontonummer
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    <span
                      className="sc-jOxuqd jUweto"
                    >
                      <span>
                        8786
                      </span>
                      <span>
                        52
                      </span>
                      <span>
                        75970
                      </span>
                    </span>
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Inntekstsperiode
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Månedssats
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Inntekt for perioden
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    39 691,00 NOK
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Refusjonstype
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    Ikke refusjon
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Refusjon til dato
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    12.03.2018
                  </dd>
                </div>
                <div>
                  <dt
                    className="typo-normal"
                  >
                    Sykepenger fra og med
                  </dt>
                  <dd
                    className="typo-element"
                  >
                    18.02.2018
                  </dd>
                </div>
              </dl>
            </li>
          </ol>
          <button
            className="knapp sc-eLwHGX ifRnTZ knapp--hoved"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Vis alle arbeidsforhold
          </button>
        </article>
      </div>
      <section
        className="sc-fbyett hGyAPd"
      >
        <h4
          className="typo-ingress"
        >
          Utbetalinger på vent
        </h4>
        <div
          className="sc-iCfLBT gEOSDn typo-normal"
        >
          <table
            role="table"
          >
            <thead
              role="rowgroup"
            >
              <tr
                role="row"
              >
                <th
                  role="columnheader"
                >
                  Årsak
                </th>
                <th
                  role="columnheader"
                >
                  Utbetalingsperiode
                </th>
                <th
                  role="columnheader"
                >
                  Utbetalingsgrad
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                role="row"
              >
                <td
                  role="cell"
                >
                  Pga mistenkelig oppførsel
                </td>
                <td
                  role="cell"
                >
                  13.10.2017 - 10.10.2018
                </td>
                <td
                  role="cell"
                >
                  62%
                </td>
              </tr>
              <tr
                role="row"
              >
                <td
                  role="cell"
                >
                  Pga mistenkelig oppførsel
                </td>
                <td
                  role="cell"
                >
                  13.10.2017 - 10.10.2018
                </td>
                <td
                  role="cell"
                >
                  62%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </section>
      <section
        className="sc-TBWwm cfGfJO"
      >
        <h4
          className="typo-ingress"
        >
          Utbetalinger
        </h4>
        <div
          className="sc-iCfLBT gEOSDn typo-normal"
        >
          <table
            role="table"
          >
            <thead
              role="rowgroup"
            >
              <tr
                role="row"
              >
                <th
                  role="columnheader"
                >
                  Reg.dato
                </th>
                <th
                  role="columnheader"
                >
                  Type
                </th>
                <th
                  role="columnheader"
                >
                  Periode
                </th>
                <th
                  role="columnheader"
                >
                  Utb.grad
                </th>
                <th
                  role="columnheader"
                >
                  Dagsats
                </th>
                <th
                  role="columnheader"
                >
                  Bruttobeløp
                </th>
                <th
                  role="columnheader"
                >
                  Arb.giver
                </th>
                <th
                  role="columnheader"
                >
                  Org.nummer
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                role="row"
              >
                <td
                  role="cell"
                >
                  25.06.2018
                </td>
                <td
                  role="cell"
                >
                  KONTOØVERFØRING
                </td>
                <td
                  role="cell"
                >
                  14.01.2018 - 15.07.2017
                </td>
                <td
                  role="cell"
                >
                  79%
                </td>
                <td
                  role="cell"
                >
                  705,00 NOK
                </td>
                <td
                  role="cell"
                >
                  466,00 NOK
                </td>
                <td
                  role="cell"
                >
                  Vedvik - Lunde
                </td>
                <td
                  role="cell"
                >
                  1234567890
                </td>
              </tr>
              <tr
                role="row"
              >
                <td
                  role="cell"
                >
                  25.06.2018
                </td>
                <td
                  role="cell"
                >
                  KONTOØVERFØRING
                </td>
                <td
                  role="cell"
                >
                  14.01.2018 - 15.07.2017
                </td>
                <td
                  role="cell"
                >
                  79%
                </td>
                <td
                  role="cell"
                >
                  705,00 NOK
                </td>
                <td
                  role="cell"
                >
                  466,00 NOK
                </td>
                <td
                  role="cell"
                >
                  Vedvik - Lunde
                </td>
                <td
                  role="cell"
                >
                  1234567890
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="alertstripe alertstripe--info"
        >
          <span
            className="alertstripe__ikon"
          >
            <span
              className="sr-only"
            >
              info
            </span>
            <svg
              aria-label="info-ikon"
              focusable="false"
              height="1.5em"
              kind="info-sirkel-fyll"
              role="img"
              viewBox="0 0 24 24"
              width="1.5em"
            >
              <g
                fill="none"
              >
                <path
                  d="M12 0C5.382 0 0 5.382 0 12s5.382 12 12 12c6.617 0 12-5.382 12-12S18.617 0 12 0z"
                  fill="#337C9B"
                />
                <path
                  d="M12 5a1.566 1.566 0 1 1 .11 3.13A1.566 1.566 0 0 1 12 5zm2.976 12.01c.563 0 1.043.431 1.043.991s-.48.992-1.043.992H9.39c-.564 0-1.043-.431-1.043-.992 0-.56.479-.99 1.043-.99h1.6v-5.016h-.986c-.565 0-1.044-.43-1.044-.991 0-.56.48-.991 1.044-.991h2.03c.563 0 1.043.43 1.043.99v6.007h1.899z"
                  fill="#FFF"
                />
              </g>
            </svg>
          </span>
          <div
            className="typo-normal alertstripe__tekst"
          >
            For detaljer om utførte utbetalinger 
            <a
              href="/person/10108000398/utbetaling"
              onClick={[Function]}
            >
              se Utbetalingsoversikten.
            </a>
          </div>
        </div>
      </section>
    </div>
  </article>
</section>
`;
